switchTool method in BaseIntegrationTest fixed: -BrushPickerDialogIntegrationTest -ColorDialogIntegratinTest -CropToolIntegrationTest